link -> target='_blank'

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
               <!--<img class="card-img-top" src="img/profile.jpg" alt="loading...">-->
               <div class="card-body">
                 <h5 class="card-title">NTPU allStar League</h5>
-                <p class="card-text">A demo version website of the voting system for NTPU Allstar League.</p>
+                <p class="card-text">A demo version website of the voting system for 2017 NTPU Allstar League.</p>
                 <a href="https://ccwang.serveo.net/NTPUallstar/" class="btn btn-light" target="_blank">Website</a>
               </div>
             </div>
@@ -369,14 +369,14 @@
         <ul class="fa-ul mb-5">
           <li>
             <p>
-              <b><a href="https://www.researchgate.net/publication/330439486_Encoding_Candlesticks_as_Images_for_Patterns_Classification_Using_Convolutional_Neural_Networks">Encoding Candlesticks as Images for Patterns Classification Using Convolutional Neural Networks</a></b><br>
+              <b><a href="https://www.researchgate.net/publication/330439486_Encoding_Candlesticks_as_Images_for_Patterns_Classification_Using_Convolutional_Neural_Networks" target="_blank">Encoding Candlesticks as Images for Patterns Classification Using Convolutional Neural Networks</a></b><br>
               Yun-Cheng Tsai, Jun-Hao Chen & Chun-Chieh Wang<br>
               <i>Journal of Intelligent Systems, Preprint, January 2019</i>
             </p>
           </li>
           <li>
             <p>
-              <b><a href="https://www.researchgate.net/publication/322355445_Predict_Forex_Trend_via_Convolutional_Neural_Networks">Predict Forex Trend via Convolutional Neural Network</a></b><br>
+              <b><a href="https://www.researchgate.net/publication/322355445_Predict_Forex_Trend_via_Convolutional_Neural_Networks" target="_blank">Predict Forex Trend via Convolutional Neural Network</a></b><br>
               Yun-Cheng Tsai, Jun-Hao Chen & Jun-Jie Wang<br>
               <i>Journal of Intelligent Systems, 10.1515/jisys-2018-0074</i>
             </p>
