2017ntpuallstar server migration

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               <div class="card-body">
                 <h5 class="card-title">NTPU allStar League</h5>
                 <p class="card-text">A demo version website of the voting system for 2017 NTPU Allstar League.</p>
-                <a href="https://ccwang.serveo.net/NTPUallstar/" class="btn btn-light" target="_blank">Website</a>
+                <a href="http://ccwang.epizy.com/2017NTPUallstar/" class="btn btn-light" target="_blank">Website</a>
               </div>
             </div>
           </div>
