--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Part-time Engineer</h3>
-            <div class="subheading mb-3">China Trust Commercial Bank, Foreign Exchange Department</div>
+            <div class="subheading mb-3">China Trust Commercial Bank, Foreign Exchange Departmentl&ensp;<a href="http://www.ctbcholding.com/index.html" target="_blank">[link]</a></div>
             <p>Research on deep learning applied to trading algorithms, and also use text mining skills to analyze social media discussions, forex news and financial reports.</p>
           </div>
           <div class="resume-date text-md-right">
