--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <!--<img class="card-img-top" src="img/profile.jpg" alt="loading...">-->
               <div class="card-body">
                 <h5 class="card-title">RLFXer</h5>
-                <p class="card-text">MOST reseach project: Improving Foreign Exchange Trading Strategies via Reinforcement Learning</p>
+                <p class="card-text">MOST research project: Improving Foreign Exchange Trading Strategies via Reinforcement Learning</p>
                 <a href="https://rainboltz.github.io/rlfxer/" class="btn btn-light" target="_blank">Result</a>
               </div>
             </div>
