--- a/index.html
+++ b/index.html
@@ -193,71 +193,7 @@
     </section>
 
     <hr class="m-0">
-    <!--
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-      <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-    -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="demo">
       <div class="w-100">
         <h2 class="mb-5">DEMO</h2>
@@ -369,27 +305,49 @@
         <ul class="fa-ul mb-5">
           <li>
             <p>
-              <b><a href="https://www.researchgate.net/publication/330439486_Encoding_Candlesticks_as_Images_for_Patterns_Classification_Using_Convolutional_Neural_Networks" target="_blank">Encoding Candlesticks as Images for Patterns Classification Using Convolutional Neural Networks</a></b><br>
-              Yun-Cheng Tsai, Jun-Hao Chen & Chun-Chieh Wang<br>
-              <i>Journal of Intelligent Systems, Preprint, January 2019</i>
-            </p>
-          </li>
-          <li>
-            <p>
               <b><a href="https://www.researchgate.net/publication/322355445_Predict_Forex_Trend_via_Convolutional_Neural_Networks" target="_blank">Predict Forex Trend via Convolutional Neural Network</a></b><br>
               Yun-Cheng Tsai, Jun-Hao Chen & Jun-Jie Wang<br>
               <i>Journal of Intelligent Systems, 10.1515/jisys-2018-0074</i>
+            </p>
+          </li>
+        </ul>
+
+        <div class="subheading mb-3">Conferences</div>
+        <ul class="fa-ul mb-5">
+          <li>
+            <p>
+              <b>The application of big data on house prices in Japan: Web data mining and machine learning</b><br>
+              Ti-Cing Peng*, Chun-Chieh Wang<br>
+              <i>Annual International Conference on Recent Advances in Business, Economics, Social Sciences and Humanities (RBESH), Tokyo, 2018/10</i>
             </p>
           </li>
           <li>
             <p>
               <b>An Efficiency Comparison on Chinese Typewriting between Zhuyin Pinyin and Hanyu Pinyin</b><br>
               Chun-Chieh Wang<br>
-              <i>International Conference of Innovation and Design 2013</i>
+              <i>International Conference of Innovation and Design (ICID) 2013</i>
             </p>
           </li>
         </ul>
-
+          
+        <div class="subheading mb-3">Working Papers</div>
+        <ul class="fa-ul mb-5">
+          <li>
+            <p>
+              <b><a href="https://www.researchgate.net/publication/330439486_Encoding_Candlesticks_as_Images_for_Patterns_Classification_Using_Convolutional_Neural_Networks" target="_blank">Encoding Candlesticks as Images for Patterns Classification Using Convolutional Neural Networks</a></b><br>
+              Yun-Cheng Tsai, Jun-Hao Chen & Chun-Chieh Wang<br>
+              <i>ArXiv Preprint, January 2019</i>
+            </p>
+          </li>
+          <li>
+            <p>
+              <b>Deep Reinforcement Learning for Foreign Exchange Trading</b><br>
+              Chun-Chieh Wang & Yun-Cheng Tsai<br>
+              <i> --- </i>
+            </p>
+          </li>
+        </ul>
+        
         <div class="subheading mb-3">M.O.S.T. Research Projects</div>
         <ul class="fa-ul mb-5">
           <li style="border: 1px solid #bbbec2">
