Disabled serveo-hosted applications

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <div class="card-body">
                 <h5 class="card-title">NTPU Rate</h5>
                 <p class="card-text">A demo that shows some analytic results from social media (currently Facebook).</p>
-                <a href="https://ntpurate.serveo.net/" class="btn btn-light" target="_blank">Website</a>
+                <a href="https://ntpurate.serveo.net/" class="btn btn-light isDisabled" target="_blank">Website</a>
               </div>
             </div>
           </div>
@@ -258,7 +258,7 @@
               <div class="card-body">
                 <h5 class="card-title">WTLL</h5>
                 <p class="card-text">The Final Project we produced in the 2019 NTPU Hackathon, which the Topic is: Smart Traveling.</p>
-                <a href="http://m.me/urWTLL" class="btn btn-light" target="_blank">FB chatbot</a>&emsp;<a href="http://wtll.serveo.net/" class="btn btn-light" target="_blank">Website</a>
+                <a href="http://m.me/urWTLL" class="btn btn-light" target="_blank">FB chatbot</a>&emsp;<a href="http://wtll.serveo.net/" class="btn btn-light isDisabled" target="_blank">Website</a>
               </div>
             </div>
           </div>
@@ -268,7 +268,7 @@
               <div class="card-body">
                 <h5 class="card-title">FX-Peeker</h5>
                 <p class="card-text">Inspired from CTBC forex trading team. The website provides "Candlestick Pattern Matching" and "Sentiment Analyze" service for forex trading.</p>
-                <a href="https://fxpeeker.serveo.net/" class="btn btn-light" target="_blank">Demo</a>
+                <a href="https://fxpeeker.serveo.net/" class="btn btn-light isDisabled" target="_blank">Demo</a>
               </div>
             </div>
           </div>
@@ -298,7 +298,7 @@
               <div class="card-body">
                 <h5 class="card-title">Hopfield Neural Network .JS</h5>
                 <p class="card-text">A demo website that implemented Hopfield Neural Network in pure native JavaScript</p>
-                <a href="https://ccwang-hopfieldnn.serveo.net/" class="btn btn-light" target="_blank">Website</a>
+                <a href="https://ccwang-hopfieldnn.serveo.net/" class="btn btn-light isDisabled" target="_blank">Website</a>
               </div>
             </div>
           </div>
