--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Part-time Research Assistance</h3>
             <div class="subheading mb-3">Ti-Ching Peng, Associate Professor&ensp;<a href="https://scholar.google.com.hk/citations?user=lmNfYLsAAAAJ&hl=zh-TW" target="_blank">[link]</a></div>
-            <p>Assisted in real estate data analysis and implemented machine learning methods for further research.</p>
+            <p>Assist in real estate data analysis and implement machine learning methods for further research topics.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Sep 2017 - present</span>
