--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">National Chengchi University</h3>
-            <div class="subheading mb-3">Master degree</div>
+            <div class="subheading mb-3">CLIP Lab&ensp;<a href="https://clip.csie.org/" target="_blank">[link]</a>, Master degree</div>
             <div>Major: Computer Science</div>
             <p></p>
           </div>
