--- a/index.html
+++ b/index.html
@@ -95,20 +95,24 @@
           <a href="mailto:philip27020012@gmail.com">philip27020012@gmail.com</a>&emsp;|&emsp;
           <a href="ChunChiehWang-CV.pdf" class="isDisabled" download><i class="fa fa-download"></i> download CV</a>
         </div>
-        <p class="lead mb-5">Hi, I am <span class="marker">Philip</span>. <br>I am a strong self-motivating active learner, always full of curiosity about many things, and <span class="marker">cross-domain integration</span> is one of my proudest strengths. <br><span class="marker">Financial Technology</span> is my current research field, mainly focus on <span class="marker">numerical analytics</span> and <span class="marker">deep learning applications</span>. <br>Since I believe that we wouldn't be able to live without <span class="marker">Digital Finance</span>, I hope I could contribute to the <span class="marker">innovation of FinTech</span> in my future career.</p>
+        <p class="lead mb-5">Hi, I am <span class="marker">Philip</span>. <br>
+          I am a strong self-motivating active learner, always full of curiosity about many things, 
+          and <span class="marker">cross-domain integration</span> is one of my proudest strengths. <br>
+          <span class="marker">Recommendation algorithm</span> is my current research field, mainly focusing on <span class="marker">Graph-based Recommendation systems</span>. <br>
+          Since the E-commerce and Streaming media services are booming in these years, I believe that we would be heavily relying on <span class="marker">productive cloud services</span> and <span class="marker">good recommendation systems</span> for efficiently targeting audiences and customers efficiently. I hope I could contribute to the <span class="marker">innovation of web service applications</span> in my future career.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/chun-chieh-wang-1a73336b/" target="_blank">
+          <!--<a href="https://www.linkedin.com/in/chun-chieh-wang-1a73336b/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
-          </a>
+          </a>-->
           <a href="https://github.com/rainboltz" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://www.facebook.com/rainboltz" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://www.twitch.tv/rainboltz/" target="_blank">
+          <!--<a href="https://www.twitch.tv/rainboltz/" target="_blank">
             <i class="fab fa-twitch"></i>
-          </a>
+          </a>-->
         </div>
       </div>
     </section>
@@ -124,7 +128,7 @@
             <h3 class="mb-0">National Chengchi University</h3>
             <div class="subheading mb-3">CLIP Lab&ensp;<a href="https://clip.csie.org/" target="_blank">[link]</a>, Master degree</div>
             <div>Major: Computer Science</div>
-            <p></p>
+            <p>Research Topic: Graph-based recommendation relevant</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Sep 2019 - expected Jun 2021</span>
@@ -162,6 +166,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Part-time Research & Development</h3>
+            <div class="subheading mb-3">KKBOX, NCCU CLIP Research Team&ensp;<a href="https://www.kkbox.com/about/zh-tw" target="_blank">[link]</a></div>
+            <p>Research on recommendation algorithms based on user-item interaction graphs.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2020 – Jun 2020</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
