--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
           I am a strong self-motivating active learner, always full of curiosity about many things, 
           and <span class="marker">cross-domain integration</span> is one of my proudest strengths. <br>
           <span class="marker">Recommendation algorithm</span> is my current research field, mainly focusing on <span class="marker">Graph-based Recommendation systems</span>. <br>
-          Since the E-commerce and Streaming media services are booming in these years, I believe that we would be heavily relying on <span class="marker">productive cloud services</span> and <span class="marker">good recommendation systems</span> for efficiently targeting audiences and customers efficiently. I hope I could contribute to the <span class="marker">innovation of web service applications</span> in my future career.</p>
+          Since the E-commerce and Streaming media services are booming in these years, I believe that we would be heavily relying on <span class="marker">productive cloud services</span> and <span class="marker">good recommendation systems</span> for targeting audiences and customers efficiently.
+           I hope I could contribute to the <span class="marker">innovation of web service applications</span> in my future career.</p>
         <div class="social-icons">
           <!--<a href="https://www.linkedin.com/in/chun-chieh-wang-1a73336b/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -353,6 +354,13 @@
         <ul class="fa-ul mb-5">
           <li>
             <p>
+              <b>Deep Reinforcement Learning for Foreign Exchange Trading</b><br>
+              Chun-Chieh Wang & Yun-Cheng Tsai<br>
+              <i>The 33th International Conference on Industrial, Engineering & Other Applications of Applied Intelligent Systems (IEA/AIE 2020)</i>
+            </p>
+          </li>
+          <li>
+            <p>
               <b>The application of big data on house prices in Japan: Web data mining and machine learning</b><br>
               Ti-Ching Peng*, Chun-Chieh Wang<br>
               <i>Annual International Conference on Recent Advances in Business, Economics, Social Sciences and Humanities (RBESH), Tokyo, 2018/10</i>
@@ -374,13 +382,6 @@
               <b><a href="https://www.researchgate.net/publication/330439486_Encoding_Candlesticks_as_Images_for_Patterns_Classification_Using_Convolutional_Neural_Networks" target="_blank">Encoding Candlesticks as Images for Patterns Classification Using Convolutional Neural Networks</a></b><br>
               Yun-Cheng Tsai, Jun-Hao Chen & Chun-Chieh Wang<br>
               <i>ArXiv Preprint, January 2019</i>
-            </p>
-          </li>
-          <li>
-            <p>
-              <b>Deep Reinforcement Learning for Foreign Exchange Trading</b><br>
-              Chun-Chieh Wang & Yun-Cheng Tsai<br>
-              <i> --- </i>
             </p>
           </li>
         </ul>
@@ -406,11 +407,15 @@
         <ul class="fa-ul mb-5">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            2<sup>nd</sup> Prize - Hsinchu City Government & Tsing Hua University - <a href="https://www.facebook.com/HackMeiChu/" target="_blank">2019 Meichu Hackathon (Group Chunghwa Telecom)</a>
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             2018 College Student Research Award - M.O.S.T. - <a href="http://statistics.most.gov.tw/was2/award/AsAwardMultiQuery.aspx" target="_blank">2018 M.O.S.T. Research Project</a>
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>st</sup> Place - National Taipei University - <a href="https://econhackathon.ntpu.edu.tw/" target="_blank">2019 NTPU Hackathon</a>
+            3<sup>rd</sup> Prize - National Taipei University - <a href="https://econhackathon.ntpu.edu.tw/" target="_blank">2019 NTPU Hackathon</a>
           </li>
         </ul>
 
